text overflow issue solved

--- a/oosd/depot/depot_styles/depot_bg.css
+++ b/oosd/depot/depot_styles/depot_bg.css
@@ -29,3 +29,17 @@ body{
     max-width: 500px;
     margin: 0 auto;
 }
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+
+  }
+  
+  .flex-container > div {
+    background-color: #154360;
+    width: 50px;
+    margin: 5px;
+    text-align: center;
+    line-height: 40px;
+    
+  }
